--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
-    <title>Happy Monthsarry</title>
+    <title>I'm Sorry Love</title>
 </head>
 <body>
     <div class="header">
